# elephant-demo

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml
snacks/: models.py  serializers.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_api_project/: settings.py  urls.py
